# eduflow

./: .gitignore  Auth.qml  CMakeLists.txt  README.md  Register.qml  SplashScreen.qml  android_release.keystore  gradle.properties  main.cpp  qtquickcontrols2.conf  settings_manager.cpp  settings_manager.h
.qtcreator/: project.json.qtds
android/: AndroidManifest.xml  build.gradle
android/res/values/: libs.xml
android/res/xml/: qtprovider_paths.xml
android2/: AndroidManifest.xml
auth/: Auth.qml  AuthAPI.qml  AuthTitleBar.qml  CopyrightFooter.qml  LoadingAnimation.qml  LoginForm.qml  Message.qml  RegistrationForm.qml  ServerConfig.qml
common/: BottomBlur.qml  ConfirmDialog.qml  DialogTitleBar.qml  DisplayUtils.qml  DragPoint.qml  MobileCloseApp.qml  PolygonBackground.qml  SparksBackground.qml  TitleBar.qml  TitleBarMobile.qml
database/: database_manager.cpp  database_manager.h
enhanced/: ActionButtons.qml  EnhancedGridItem.qml  EnhancedGroupBox.qml  EnhancedListItem.qml  EnhancedSearchBox.qml  EnhancedSortComboBox.qml  EnhancedTableView.qml  EnhancedTextField.qml  EnhancedViewToggle.qml
enhanced2/: EnhancedTableView.qml  GridDelegate.qml  ListDelegate.qml  SearchBar.qml  SortPanel.qml  ViewModeSwitcher.qml
icons/: archlinux-2025.11.01-x86_64.iso.torrent
main/: AdaptiveSideBar.qml  BackgroundShapes.qml  ConfirmDialog.qml  DashboardView.qml  EventsTab.qml  EventsView.qml  GroupFormWindow.qml  GroupsDialog.qml  GroupsTab.qml  GroupsView.qml  InteractionsList.qml  Main.qml  MainAPI.qml  MainMessage.qml  MainTitleBar.qml  PolygonBackground.qml  PortfolioTab.qml  PortfolioView.qml  ProfileSettingsDialog.qml  SideBar.qml  SideBarButton.qml  StudentDialog.qml  StudentFormWindow.qml  StudentView.qml  StudentsTab.qml  StudentsView.qml  TeacherFormWindow.qml  TeachersDialog.qml  TeachersTab.qml  TeachersView.qml  UserSettingsPanel.qml  main.qml  mainAPI.qml
main/dialog/: ConfirmDialog.qml  GroupFormWindow.qml  GroupsDialog.qml  StudentDialog.qml  StudentFormWindow.qml  TeacherFormWindow.qml  TeachersDialog.qml
main/forms/: EventFormMobile.qml  EventFormWindow.qml  GroupFormMobile.qml  GroupFormWindow.qml  GroupViewFormMobile.qml  GroupViewFormWindow.qml  PortfolioFormMobile.qml  PortfolioFormWindow.qml  StudentFormMobile.qml  StudentFormWindow.qml  TeacherFormMobile.qml  TeacherFormWindow.qml
main/main/: AdaptiveSideBar.qml  AdaptiveSideBarMobile.qml  InteractionsList.qml  Main.qml  MainAPI.qml  MainMessage.qml
main/view/: DashboardView.qml  EventsView.qml  FAQView.qml  FormattedText.qml  GroupsView.qml  NewsView.qml  PortfolioView.qml  SettingsView.qml  StudentsView.qml  TeachersView.qml
main/view/settings/: AboutPage.qml  PasswordChangePanel.qml  PasswordField.qml  ProfileEditPanel.qml  ProfilePage.qml  RequirementItem.qml  SecurityPage.qml  ServerInfoPanel.qml  ServerPage.qml  SessionsPage.qml  SessionsPanel.qml  SettingsMainPage.qml  UserProfilePanel.qml
not usable/: AuthTitleBar.qml  MainTitleBar.qml  PolygonBackground.qml
splash/: SplashScreen.qml  SplashScreenMobile.qml  WelcomeScreen.qml
отчёт/: Лицо.docx  Пояснительная записка.docx
